# django-my-tracks

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/config/: settings.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py  0002_artist_unique_name.py  0003_track.py
app/tests/models/: test_artist.py
scripts/: entrypoint.sh
