[tool.poetry]
name = "django-my-tracks"
version = "0.1.0"
description = ""
authors = ["pynation <nationpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
python-decouple = "^3.8"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
